Mulai mengisi konten

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
         </ul>
         <div class="menu-toggle">
             <input type="checkbox">
-            <span>Property <i class="fas fa-caret-down"></i></span>
+            <span>Property <i class="fas fa-caret-left"></i></span>
             <ul>
                 <li><a href="">RUMAH123</a></li>
                 <li><a href="">OLX</a></li>
             </ul>
         </div>
         <script src="script.js"></script>
+    </div>
+    <div class="hero">
+        <img src="https://image.freepik.com/free-vector/young-people-standing-talking-each-other-speech-bubble-smartphone-girl-flat-vector-illustration-communication-discussion_74855-8741.jpg" alt="">
     </div>
    
     
