Memperbarui Navbar dan Menambahkan Banner

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         <div class="menu-toggle">
             <input type="checkbox">
-            <span>Property <i class="fas fa-caret-left"></i></span>
+            <span>Property </span>
             <ul>
                 <li><a href="">RUMAH123</a></li>
                 <li><a href="">OLX</a></li>
@@ -32,7 +32,12 @@
         <script src="script.js"></script>
     </div>
     <div class="hero">
-        <img src="https://image.freepik.com/free-vector/young-people-standing-talking-each-other-speech-bubble-smartphone-girl-flat-vector-illustration-communication-discussion_74855-8741.jpg" alt="">
+        <img src="banner.jpg" alt="">
+        <div class="text">
+            <h2>Find a House That Fits Your Needs</h2>
+            <br><br>
+            <a href="#">Click Here</a>
+        </div>
     </div>
    
     
