Membuat Link iseng

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <br><br>
             <a href="#"><i class="fas fa-house"></i> 123</a>
             <div class="olx">
-              <a href="">OLX</a>   
+              <a href="https://194.163.128.129/episode/squid-game-2021-episode-1/">OLX</a>   
             </div>
            
         </div>
